// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyboardKey renders a <kbd> element with element child 1`] = `
"<kbd className=\\"key\\">
  <strong>
    foo
  </strong>
</kbd>"
`;

exports[`KeyboardKey renders a <kbd> element with icon and title 1`] = `
"<kbd className=\\"key key-icon\\" title=\\"foo\\">
  <FontAwesomeIcon icon={{...}} border={false} className=\\"\\" mask={{...}} fixedWidth={false} inverse={false} flip={{...}} listItem={false} pull={{...}} pulse={false} rotation={{...}} size={{...}} spin={false} symbol={false} title=\\"\\" transform={{...}} />
</kbd>"
`;

exports[`KeyboardKey renders a <kbd> element with string child 1`] = `
"<kbd className=\\"key\\">
  foo
</kbd>"
`;
